--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
-    "moment": "^2.24.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "moment": "^2.29.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-moment": "^0.8.4",
-    "react-scripts": "2.1.5",
-    "react-twitter-embed": "^2.0.4"
+    "react-scripts": "^4.0.3",
+    "react-twitter-embed": "^2.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
